# AIFX013_VCR

./: .gitignore  01_detect_crop.py  02_prepare_data.py  03_preprocess.py  04_model.py  04_train_mlflow.py  05_infer.py  05_optimize.py  05_train_mlflow.py  06_eval.py  06_infer.py  06_train.py  06_train_mlflow.py  07_infer.py  07_optimize.py  08_eval.py  COLORNET_TUNING_GUIDE.md  PIPELINE_VCR.md  README.md  VISUALIZATION_FIFTYONE.md  VISUALIZATION_GUIDE.md  analyze_study.py  benchmark_backbones.py  config.yaml  fix.py  hyperparameters.yaml  inspect_checkpoint.py  problems:.md  pyproject.toml  re_annotate_colors.py  re_annotate_colors_web.py  run.sh  train_best_model.py  trying.md  visualize_dataset.py
agents/: DOCUMENTATION_TEMPLATE.md  Instructions.md  PIPELINE_VCR.md  Projeto_Classificador.md
agents/specs/: 01_system_architecture.md  02_validation_protocols.md  03_project_requirements.md
data/processed/: class_counts.json  class_to_idx.json
docs/: DEV_PLAN_IMAGE_REVIEW_TOOL.md  IMPLEMENTATION_ANALYSIS.md  PRD_IMAGE_REVIEW_TOOL.md
docs/specs/: spec_phase10_filters.md  spec_phase11_vehicle_direction.md  spec_phase12_filesystem_browser.md  (+22 more)
scripts/: clean_experiment.py  fix_cropped_rects.py  import_cvat_labels.py  janitor.py  reorganize_data_struct.py  upload_to_cvat.py  visualize_bboxes.py
src/: 01_detect_crop.py  02_prepare_data.py  03_preprocess.py  04_model.py  06_train.py  07_infer.py  08_eval.py  09_profile_inference.py  __init__.py
tests/: test_core.py  test_data.py  test_detectors.py  test_model.py  test_preprocess.py  test_utils.py
(+70 files in other folders)
